# Wallmart_hack

./: .gitignore  CMakeLists.txt  README.md  generate_token
backend/: db_utils.cpp  gen_token.cpp  main_backend.cpp  redeem.cpp  store_token.cpp  token_utils.cpp
include/: db_utils.h  token_utils.h
src/: main.cpp  mainwindow.cpp  mainwindow.h  rewards.cpp  rewards.h  storewindow.cpp  storewindow.h  wallet_backend.h
